samples/_failures_safe/1761554969_9cbdf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf4a9138.c: In function ‘main’:
./samples/SAFE/__tmp_cf4a9138.c:167:5: error: expected declaration or statement at end of input
  167 |     }
      |     ^
